--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
   },
   "homepage": "https://github.com/ycrao/electron-app-topgo-alarm#readme",
   "devDependencies": {
-    "electron": "^9.0.2",
-    "electron-rebuild": "^1.11.0",
-    "electron-builder": "^22.7.0"
+    "electron": "^9.2.1",
+    "electron-builder": "^22.8.0",
+    "electron-rebuild": "^1.11.0"
   },
   "dependencies": {
     "canvas": "^2.6.1"
