--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "homepage": "https://github.com/ycrao/electron-app-topgo-alarm#readme",
   "devDependencies": {
-    "electron": "^9.3.1",
+    "electron": ">=9.3.1",
     "electron-builder": "^22.9.1",
     "electron-rebuild": "^2.3.0"
   },
